--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "market-chairs",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://exclusive-pg.github.io/react-app/1",
+  "homepage": "https://Exclusive-PG.github.io/react-deploy",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.30",
     "@fortawesome/free-brands-svg-icons": "^5.14.0",
